fix german translations

--- a/custom_components/knv_heatpump/translations/de.json
+++ b/custom_components/knv_heatpump/translations/de.json
@@ -2,7 +2,7 @@
   "config": {
     "step": {
       "user": {
-        "title": "Fill in your KNV Home login information",
+        "title": "Füller deine KNV Home Daten ein",
         "data": {
           "ip_address": "IP Adresse",
           "username": "Nutzernamen",
